; ModuleID = '/home/carl/AnghaBench/vlc/test/src/player/extr_player.c_player_start.c'
source_filename = "/home/carl/AnghaBench/vlc/test/src/player/extr_player.c_player_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctx = type { i32 }

@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ctx*)* @player_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @player_start(%struct.ctx* %0) #0 {
  %2 = alloca %struct.ctx*, align 8
  %3 = alloca i32, align 4
  store %struct.ctx* %0, %struct.ctx** %2, align 8
  %4 = load %struct.ctx*, %struct.ctx** %2, align 8
  %5 = getelementptr inbounds %struct.ctx, %struct.ctx* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @vlc_player_Start(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @VLC_SUCCESS, align 4
  %10 = icmp eq i32 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  ret void
}

declare dso_local i32 @vlc_player_Start(i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
